--- a/Content/01_Introduction Topics/a3.Help_Legal.htm
+++ b/Content/01_Introduction Topics/a3.Help_Legal.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="477" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="618" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
@@ -21,7 +21,16 @@
                     </td>
                     <td style="text-align: center;font-size: 11pt;"><MadCap:variable name="AA_Integris-2k3k_Vars.Help3000-ChangeDate" />
                     </td>
-                    <td style="vertical-align: top;font-size: 11pt;">Initial draft updated for Integris 3000 V3.1</td>
+                    <td style="vertical-align: top;font-size: 11pt;">
+                        <p>Addition of the following features:</p>
+                        <p>Integris 3000:</p>
+                        <ul>
+                            <li>Multi-graph</li>
+                            <li>Save / Load display configuration</li>
+                            <li>Fast / Variable waterfall data</li>
+                            <li>Automatic configuration selection</li>
+                        </ul>
+                    </td>
                 </tr>
             </tbody>
         </table>
