--- a/Content/01_Introduction Topics/a4.Doc Info.htm
+++ b/Content/01_Introduction Topics/a4.Doc Info.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="473" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="467" MadCap:lastWidth="624">
     <head>
         <link href="../Resources/Table Stylesheets/ShadedRowStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>System Reset</title>
     </head>
@@ -19,7 +19,7 @@
             <tbody>
                 <tr class="TableStyle-ShadedRowStyle01-Body-Body1">
                     <td class="TableStyle-ShadedRowStyle01-BodyE-Column1-Body1">Integris Safety and Conformance</td>
-                    <td class="TableStyle-ShadedRowStyle01-BodyD-Column1-Body1">Printed</td>
+                    <td class="TableStyle-ShadedRowStyle01-BodyD-Column1-Body1">Printed &amp;&#160;PDF</td>
                 </tr>
                 <tr class="TableStyle-ShadedRowStyle01-Body-Body2">
                     <td class="TableStyle-ShadedRowStyle01-BodyE-Column1-Body2">Integris Quick Start Guide</td>
@@ -27,9 +27,7 @@
                 </tr>
                 <tr class="TableStyle-ShadedRowStyle01-Body-Body1">
                     <td class="TableStyle-ShadedRowStyle01-BodyE-Column1-Body1">Integris User Guide</td>
-                    <td class="TableStyle-ShadedRowStyle01-BodyD-Column1-Body1">
-                        <p>PDF</p>
-                    </td>
+                    <td class="TableStyle-ShadedRowStyle01-BodyD-Column1-Body1">PDF</td>
                 </tr>
                 <tr class="TableStyle-ShadedRowStyle01-Body-Body2">
                     <td class="TableStyle-ShadedRowStyle01-BodyB-Column1-Body2">Integris System and Expert</td>
@@ -37,7 +35,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>Printed documents are included in the packaging and are designed to be read before the system is first used, and to assist in getting up and running as soon as possible.</p>
+        <p>Printed documents are included in the packaging and are designed to be read before the system is first used, and to assist in getting up and running as quickly as possible.</p>
         <p>PDF documents typically contain more detailed information and are located on the system hard drive. A shortcut is created on the desktop to help locate them.</p>
     </body>
 </html>
