--- a/Content/01_Introduction Topics/b.Safety & Compliance.htm
+++ b/Content/01_Introduction Topics/b.Safety & Compliance.htm
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="653" MadCap:lastWidth="850">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="854" MadCap:lastWidth="624">
     <head>
+        <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h2 style="mc-auto-number-format: 'CH:{chapnum}.{n+}. ';" MadCap:autonum="1.1. ">Safety &amp; Compliance</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Safety &amp; Compliance</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Safety &amp; Compliance</h2>
         <p>To ensure correct and safe operation, you must follow all safety precautions and instructions referred to in this user guide and in the other documentation supplied with your Integris System.</p>
         <p>•	Use the Proper Power Cord. Use only the power cord specified for use with this product and certified for the country of use.</p>
         <p>•	Check Voltage and Power. Before applying power ensure the power rating of the socket you plug the power cord into is compatible with the power rating on the label of the product.</p>
@@ -19,12 +21,17 @@
         <p>•	Do Not Operate with Covers or Panels Removed.</p>
         <p>•	Avoid Exposed Circuitry. Do not touch exposed connections and components when power is present.</p>
         <p>•	Do Not Operate with Suspected Failures. If you suspect  there is damage to this product, have it inspected by qualified service personnel before use.</p>
-        <p>•	Obey Safety Information. This user guide contains additional safety and operating instructions highlighted as follows:</p>
-        <p><b>DANGER</b> 	Describes a condition that may lead to an injury hazard</p>
-        <p><b>WARNING</b> 	Describes a condition that may result in damage to equipment</p>
-        <p><b>CAUTION</b> 	Describes a requirement that must be met to avoid hazard to property.</p>
-        <p><b>IMPORTANT</b> 	Describes a condition that may lead to undesirable results.</p>
-        <p>&#160;</p>
-        <p><b>NOTE</b>: Integris systems are supplied as a turnkey solution consisting of the portable chassis, Interface Cards, Software and Product Licenses so no access to the internal components of the platform is necessary.</p>
+        <p>•	Obey Safety Information. </p>
+        <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
+            <col class="TableStyle-NoteBoxStyle01-Column-Column1">
+            </col>
+            <tbody>
+                <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
+                    <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
+                        <p><b>Note:</b>  Integris systems are supplied as a turnkey solution consisting of the portable chassis, Interface Cards, Software and Product Licenses so no access to the internal components of the platform is necessary.<![CDATA[             ]]></p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
