--- a/Content/20_2000/c1.Set Link Rate.htm
+++ b/Content/20_2000/c1.Set Link Rate.htm
@@ -171,6 +171,6 @@ Integris hardware is initializing
                 </tr>
             </tbody>
         </table>
-        <p class="FigNum01" MadCap:autonum=" Fig 1.2 ">Supported CPRI&#160;Link Rates</p>
+        <p class="TableNum01" MadCap:autonum=" Table 1.2 ">Supported CPRI&#160;Link Rates</p>
     </body>
 </html>
