--- a/Content/20_2000/c2.Load Config File.htm
+++ b/Content/20_2000/c2.Load Config File.htm
@@ -22,7 +22,7 @@
                     <td style="font-size: 10pt">GUI or Keyboard</td>
                     <td style="font-size: 10pt;"><i>Configuration</i>icon at the top of the Main Window, or Auto Detect</td>
                     <td rowspan="3">
-                        <img src="../Resources/Images/Config Icon on main window.jpg" style="height: auto;vertical-align: middle;clear: none;mc-float: none;margin-left: 0px;width: 120px;" />
+                        <img src="../Resources/Images/Config Icon on main window.jpg" style="height: auto;vertical-align: middle;clear: none;mc-float: none;width: 120px;margin-left: 10px;" />
                     </td>
                 </tr>
                 <tr>
