--- a/Content/30_3000/4.Integris_3000.htm
+++ b/Content/30_3000/4.Integris_3000.htm
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="690" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="745" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
         <h1 class="AA_Chpt_Heading1" MadCap:conditions="Default.Print" MadCap:autonum="1. ">Integris 3000</h1>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Introduction</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Integris 3000</h2>
         <p>This section explains how to set up the <i>Integris 3000</i> and connect it to the network. It shows the location and use of the connections along with details of how to start and use the system.</p>
         <p>Integris 3000 is a 'digital' spectrum analyzer that displays power spectrum, persistence and/or waterfall graphs derived from the IQ data carried over a CPRI link.</p>
