--- a/Content/30_3000/c1.System_Status_Pane.htm
+++ b/Content/30_3000/c1.System_Status_Pane.htm
@@ -11,7 +11,7 @@
             <col />
             <tr>
                 <td style="text-align: center;width: 500px;">
-                    <img src="../Resources/Images/3000/V4/V4-StatusPane-File.jpg" style="float: center;clear: both;margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;height: auto;width: auto;" MadCap:mediastyle="@media print { height: 250px;width: auto; }">
+                    <img src="../Resources/Images/3000/V4/V4-StatusPane-File.jpg" style="float: center;clear: both;margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;width: auto;height: 200px;" MadCap:mediastyle="@media print { height: 250px;width: auto; }">
                     </img>
                 </td> <![CDATA[ ]]></tr>
             <tr>
@@ -39,12 +39,12 @@
                 <td style="text-align: center;width: 500px;">
                     <img src="../Resources/Images/3000/V4/V4-SFP-Infopane.jpg" style="float: center;clear: both;margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;width: auto;height: 200px;" MadCap:mediastyle="@media print { width: auto;height: 200px; }">
                     </img>
-                </td> </tr>
+                </td> <![CDATA[ ]]></tr>
             <tr>
                 <td style="text-align: center;width: 500px;">
                     <p class="FigNum01" MadCap:autonum=" Fig 1.3 "><a name="SFPInfo"></a>Click on <b>Link</b> to display SFP information</p>
-                </td> </tr>
-            <tr> </tr>
+                </td> <![CDATA[ ]]></tr>
+            <tr> <![CDATA[ ]]></tr>
         </table>
     </body>
 </html>
