--- a/Content/30_3000/c2c.Load Config File.htm
+++ b/Content/30_3000/c2c.Load Config File.htm
@@ -126,7 +126,7 @@
                 </tr>
             </tbody>
         </table>
-        <table>
+        <table style="margin-left: auto;margin-right: auto;">
             <col class="TableStyle-NoteBoxStyle01-Column-Column1" />
             <tbody>
                 <tr>
