--- a/Content/30_3000/c6.Waterfall Setup.htm
+++ b/Content/30_3000/c6.Waterfall Setup.htm
@@ -3,7 +3,7 @@
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Setting Waterfall Graph Parameters</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Setting Waterfall Graph Parameters</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting Waterfall Graph Parameters</h2>
         <p>The Waterfall graph type gives a visual representation of frequency in the X axis over time in the Y axis. It is useful for seeing small changes in signal amplitude as well as picking out intermittent interferers.</p>
         <p style="text-align: center;">
@@ -39,7 +39,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 "><a name="freq"></a>The frequency at the current mouse position</p>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 "><a name="freq"></a>Frequency offset at the current mouse position</p>
                     </td>
                 </tr>
             </tbody>
