--- a/Content/30_3000/c8.Using Markers.htm
+++ b/Content/30_3000/c8.Using Markers.htm
@@ -1,50 +1,80 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="762" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="835" MadCap:lastWidth="624">
     <head><title>The Markers Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Using Markers</h2>
-        <h2 class="AA_Online_H2">Using Markers</h2>
-        <p>
-            <img src="../../Resources/Images/3000/Markers_Menu_Modern01.jpg" MadCap:mediastyle="@media print { width: auto;height: 110px; }" style="float: right;clear: left;vertical-align: text-top;margin-left: 10px;margin-top: 0px;margin-bottom: 0px;height: 80px;" />The Integris 3000 has three optional markers that can be used to track various locations on the spectrum. </p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Using Markers</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Using Markers</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
-            <col />
             <col />
             <tbody>
                 <tr>
                     <td style="font-size: 11pt;"><b>Menu Location</b>
                     </td>
-                    <td>&#160;</td>
                 </tr>
                 <tr>
-                    <td style="font-style: italic;font-size: 11pt;">Classic  <b>Markers</b> Menu </td>
-                    <td>&#160;</td>
+                    <td style="font-style: italic;font-size: 11pt;">Classic  Menu <b>Markers &gt; Marker</b></td>
                 </tr>
                 <tr>
-                    <td style="font-style: italic;font-size: 11pt;">Modern <b>Markers</b> Menu </td>
-                    <td>&#160;</td>
+                    <td style="font-style: italic;font-size: 11pt;">Modern Menu <b>Markers &gt; Configure</b></td>
                 </tr>
             </tbody>
         </table>
-        <p style="text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_MarkersPanel.jpg" MadCap:mediastyle="@media print { width: auto;height: 200px; }" style="margin-top: 10px;margin-bottom: 0px;height: 120px;" />
-        </p>
-        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Markers Configuration Panel<a name="markers"></a></p>
-        <p>To set a marker:</p>
+        <p>The Integris 3000 has five optional markers that can be used to track various locations on the spectrum. </p>
+        <h3>To set a marker using the Modern Menu system:</h3>
         <ol>
             <li>Open the Markers menu. </li>
             <li>Click on <b>Configure</b>. This will open a <i>Markers configuration</i> panel. 
-			<MadCap:xref href="#mk_Menu" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref></li>
+			<MadCap:xref href="#mk_Menu" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref><table style="width: 100%;margin-left: 0;margin-right: auto;"><col /><tbody><tr><td style="text-align: center;"><img src="../Resources/Images/3000/V4/V4-Markers-Table.jpg" MadCap:mediastyle="@media print { height: auto;width: 250px; }" style="height: auto;width: 250px;" /></td></tr><tr><td><p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Markers Configuration Panel<a name="markers"></a></p></td></tr></tbody></table></li>
             <li>You now have a number of options:</li>
             <ul>
-                <li>Click on <b>Active</b> to activate the desired marker.</li>
-                <li>Type the desired frequency into the <b>Frequency</b> box. (<b>Markers &gt; Freq</b> on classic menus)</li>
+                <li>Click the <b>Active</b> checkbox to activate the desired marker.</li>
+                <li>Type the desired frequency into the <b>Frequency</b> box. </li>
                 <li>Select the <b>Ref</b> box to make this the reference marker on the <i>Marker Table</i>.</li>
                 <li>Click on <b>Go Peak</b> to move the marker to the point of greatest Amplitude.</li>
                 <li>Click on <b>Next Peak</b> to cycle the marker through the peaks on the spectrum graph.</li>
             </ul>
-            <li>Click on the All Off menu item to deactivate all the markers (though the <i>Markers Control Panel</i> remains on the screen).</li>
-            <li>Click on <b>Show Table</b> to enable the onscreen <i>Markers Table</i> (<MadCap:xref href="c9.Marker_Table.htm" class="XREF_Range">"Using the Marker Table" on page 1</MadCap:xref>).</li>
+            <li>Click on the <b>All Off</b> menu item to deactivate all the markers </li>
+            <li>
+                <p>Click on the <b>Show Table</b> checkbox to enable the onscreen <i>Markers Table</i></p>
+                <p MadCap:conditions="Default.Print"> (See <MadCap:xref href="c9.Marker_Table.htm" class="XREF_Range">"Using the Marker Table" on page 1</MadCap:xref>).</p>
+                <p MadCap:conditions="Default.Screen"> (See <MadCap:xref href="c9.Marker_Table.htm">Using the Marker Table</MadCap:xref>).</p>
+            </li>
         </ol>
+        <h3>To set a marker using the Classic Menu system:
+        </h3>
+        <ol>
+            <li>Select the <b>Markers</b> menu. </li>
+            <li>Click on <b>Marker</b> and select the desired marker number.</li>
+            <li>
+                <p>The <i>Active</i> menu item will display "Off" to indicate that the selected marker number is not yet active. Click
+			 on <b>Active</b> to toggle it to "On". The magenta marker arrow will appear on the screen at frequency offset zero (0.0 MHz).</p>
+                <table style="width: 100%;margin-left: 0;margin-right: auto;">
+                    <col />
+                    <tbody>
+                        <tr>
+                            <td style="text-align: center;">
+                                <img src="../Resources/Images/3000/V4/V4-Markers01.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="width: 300px;height: auto;margin-top: 10px;" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="FigNum01" MadCap:autonum=" Fig 1.2 "><a name="mark01"></a>Marker 1 enabled</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li> <![CDATA[ ]]></ol>
+        <p>You now have a number of options:</p>
+        <ul>
+            <li>Click on the <b>Freq</b> menu item and type the desired marker frequency.</li>
+            <li>Click on the <b>Reference</b> menu item ands select the marker you wish to use as a reference on the <i>Marker Table</i>.</li>
+            <li>Click on <b>Go Peak</b> to move the marker to the point of greatest Amplitude.</li>
+            <li>Click on <b>Next Peak</b> to cycle the marker through the peaks on the spectrum graph.</li>
+            <li>Click on the <b>All Off</b> menu item to deactivate all the markers.</li>
+            <li>Click on <b>Table</b> to enable the onscreen <i>Markers Table</i> <![CDATA[ ]]></li>
+        </ul>
+        <p MadCap:conditions="Default.Print"> (See <MadCap:xref href="c9.Marker_Table.htm" class="XREF_Range">"Using the Marker Table" on page 1</MadCap:xref>).</p>
+        <p MadCap:conditions="Default.Screen"> (See <MadCap:xref href="c9.Marker_Table.htm">Using the Marker Table</MadCap:xref>).</p>
     </body>
 </html>
