--- a/Content/30_3000/c9.Marker_Table.htm
+++ b/Content/30_3000/c9.Marker_Table.htm
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="842" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="12" MadCap:lastHeight="732" MadCap:lastWidth="624">
     <head><title>The Marker Table</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Using the Marker Table</h2>
-        <h2 class="AA_Online_H2">Using the Marker Table</h2>
-        <p>Selecting <i>Table</i> on the <i>Markers</i> menu displays a table of the three available spectrum Markers and their associated values <MadCap:xref href="#Markers&amp;Table" class="ListOfPageNumber">(See  Figure 1.1. )</MadCap:xref>.</p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Using the Marker Table</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Using the Marker Table</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
             <col />
@@ -25,10 +24,33 @@
                 </tr>
             </tbody>
         </table>
-        <p>To use the Markers Table:</p>
+        <p>When enabled, the <i>Markers Table</i> is located below the on-screen graph(s) and displays amplitude and frequency offset values for each of the five markers.</p>
+        <table style="width: 100%;margin-left: 0;margin-right: auto;">
+            <col />
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <img src="../Resources/Images/3000/V4/V4-Markers-Table2.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="mc-float: center;clear: both;margin-top: 10px;height: auto;width: 400px;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="Mark"></a>Markers &amp; the Marker Table</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>To enable the <i>Markers Table</i> using the <i>Modern Menu</i> system:</h3>
         <ol>
-            <li>Enable the Table using <b>Markers &gt; Show Table</b> (<b>Markers &gt; Table</b> on classic menus)</li>
-            <li>Set one marker as a reference by clicking to select it in the <b>Ref</b> box on the <i>Marker Control Panel.</i> (<b>Markers &gt; Reference</b> on classic menus).</li>
+            <li>Open the <b>Markers</b> menu and click <b>Show Table</b>. The Markers Table opens at the bottom of the screen under the graph(s)</li>
+            <li>On the <i>Markers</i> menu, click on <b>Configure</b>. The Markers control panel opens
+			 <MadCap:xref href="#panel" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref><table style="width: 100%;margin-left: 0;margin-right: auto;"><col /><tbody><tr><td style="text-align: center;"><img src="../Resources/Images/3000/V4/V4-Markers-Table.jpg" MadCap:mediastyle="@media print { height: auto;width: 250px; }" style="height: auto;width: 250px;" /></td></tr><tr><td><p class="FigNum01" MadCap:autonum=" Fig 1.2 "><a name="panel"></a>The Markers control panel</p></td></tr></tbody></table></li>
+            <li>Set one marker as a reference by clicking to select it in the <b>Ref</b> column.</li>
+        </ol>
+        <h3>To enable the <i>Markers Table</i> using the <i>Classic Menu</i> system:</h3>
+        <ol>
+            <li>Open the <b>Markers</b> menu and click on <b>Show Table</b>. The Markers Table opens at the bottom of the screen under the graph(s).</li>
+            <li>Set one marker as a reference by clicking on <b>Reference</b> and selecting the desired marker number.</li>
         </ol>
         <table style="margin-left: auto; margin-right: auto;">
             <col style="width: 5%;" />
@@ -40,15 +62,11 @@
                         <ul>
                             <li>The <i>Frequency</i> and <i>Power</i> columns show the current values for this pointer.</li>
                             <li>The <b style="font-style: italic; font-weight: normal;">Δ Power</b> column displays the difference between the power value for the reference marker (shown as a 0.000 db value) and the power value for this marker</li>
-                            <li>The <i>Δ Frequency</i> displays the difference between the frequency of the reference marker (shown in the Δ Power column as a 0.000 db value) and the frequency for this marker</li>
+                            <li>The <i>Δ Frequency</i> displays the difference between the frequency offset of the reference marker (shown in the Δ Power column as a 0.000 db value) and the frequency offset for this marker</li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <p style="text-align: center;">
-            <img src="../../Resources/Images/3000/Markers&amp;Table01.jpg" MadCap:mediastyle="@media print { width: 350px;height: 176px; }" style="mc-float: center;clear: both;margin-top: 10px;width: 350px;height: 176px;" />
-        </p>
-        <p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="Markers&amp;Table"></a>Markers &amp; the Marker Table</p>
     </body>
 </html>
