--- a/Content/Resources/Print_Only/TitlePage1.htm
+++ b/Content/Resources/Print_Only/TitlePage1.htm
@@ -2,20 +2,20 @@
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="329" MadCap:lastWidth="1248" MadCap:conditions="Default.Print" MadCap:searchable="False" class="topic">
     <head>&#160;</head>
     <body>
-        <p class="ManualTitle_1st_Line"><MadCap:variable name="AA_DOC_Vars.Product Group" />
+        <p class="ManualTitle_1st_Line"><MadCap:variable name="AA_S&amp;C_Vars.Product Group" />
         </p>
-        <p class="ManualTitle_2nd_Line"><MadCap:variable name="AA_DOC_Vars.ProductName" />
+        <p class="ManualTitle_2nd_Line"><MadCap:variable name="AA_S&amp;C_Vars.ProductName" />
         </p>
-        <p class="ManualTitleLgeMain"><MadCap:variable name="AA_DOC_Vars.PDF_Title" style="font-size: 36pt;margin-bottom: 8px;" />
+        <p class="ManualTitleLgeMain"><MadCap:variable name="AA_S&amp;C_Vars.PDF_Title" style="font-size: 36pt;margin-bottom: 8px;" />
         </p>
         <p style="margin-left: 100px;">&#160;</p>
         <p style="margin-left: 100px;"><span style="font-size: 14pt;">DCN 
-				<MadCap:variable name="AA_DOC_Vars.DCN#" style="font-size: 14pt;" />.<MadCap:variable name="AA_DOC_Vars.DocVersion#" /></span>
+				<MadCap:variable name="AA_S&amp;C_Vars.DCN#" style="font-size: 14pt;" />.<MadCap:variable name="AA_S&amp;C_Vars.DocVersion#" /></span>
         </p>
         <p style="margin-left: 100px;"><span style="font-size: 14pt;">Software release 
-				<MadCap:variable name="AA_DOC_Vars.SWVersion#" /></span>
+				<MadCap:variable name="AA_S&amp;C_Vars.SWVersion#" /></span>
         </p>
-        <p style="margin-left: 100px;"><MadCap:variable name="AA_DOC_Vars.DocVersionChangeDate" />
+        <p style="margin-left: 100px;"><MadCap:variable name="AA_S&amp;C_Vars.DocVersionChangeDate" />
         </p>
     </body>
 </html>
