--- a/Content/01_Introduction Topics/a.Legal.htm
+++ b/Content/01_Introduction Topics/a.Legal.htm
@@ -5,7 +5,7 @@
     <body>
         <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. ">Foreward</h1>
         <h2>Editions &amp;&#160;Notices</h2>
-        <p>Document Control Number (DCN#) <MadCap:variable name="AA_DOC_Vars.DCN#" />.<MadCap:variable name="AA_DOC_Vars.DocVersion#Full" /></p>
+        <p>Document Control Number (DCN#) <MadCap:variable name="AA_S&amp;C_Vars.DCN#" />.<MadCap:variable name="AA_S&amp;C_Vars.DocVersion#Full" /></p>
         <table style="width: 100%;border-top-left-radius: 1px;border-top-right-radius: 1px;border-bottom-right-radius: 1px;border-bottom-left-radius: 1px;border-left-style: solid;border-left-width: 1px;border-right-style: solid;border-right-width: 1px;border-top-style: solid;border-top-width: 1px;border-bottom-style: solid;border-bottom-width: 1px;margin-left: auto;margin-right: auto;">
             <col style="width: 150px;" />
             <col style="width: 150px;" />
@@ -19,11 +19,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td style="text-align: center;font-size: 11pt;"><MadCap:variable name="AA_DOC_Vars.DocVersion#Full" />
+                    <td style="text-align: center;font-size: 11pt;"><MadCap:variable name="AA_S&amp;C_Vars.DocVersion#Full" />
                     </td>
-                    <td style="text-align: center;font-size: 11pt;"><MadCap:variable name="AA_DOC_Vars.DocVersionChangeDate" />
+                    <td style="text-align: center;font-size: 11pt;"><MadCap:variable name="AA_S&amp;C_Vars.DocVersionChangeDate" />
                     </td>
-                    <td style="vertical-align: top;font-size: 11pt;"><MadCap:variable name="AA_DOC_Vars.DocVersionUpdateReason" />
+                    <td style="vertical-align: top;font-size: 11pt;"><MadCap:variable name="AA_S&amp;C_Vars.DocVersionUpdateReason" />
                     </td>
                 </tr>
             </tbody>
@@ -31,7 +31,7 @@
         <p>&#160;</p>
         <p>The information in this document is subject to change without notice.</p>
         <p>While every effort has been made to ensure that all information in this document is accurate, no liability for any errors that may arise is implied or accepted.</p>
-        <p>Copyright © <MadCap:variable name="AA_DOC_Vars.CurrentYear" /> <MadCap:variable name="AA_DOC_Vars.CompanyName" />. All right reserved.  </p>
+        <p>Copyright © <MadCap:variable name="AA_S&amp;C_Vars.CurrentYear" /> <MadCap:variable name="AA_S&amp;C_Vars.CompanyName" />. All right reserved.  </p>
         <p>This work is proprietary and protected by copyright.  No part of this publication may be reproduced, stored in a retrieval system, or transmitted in any form by any means, electronic, mechanical, photocopying, recording, or otherwise, without the prior written permission of the copyright holder.</p>
         <p>All brand and product names used in this document are trademarks or registered trademarks of their respective owners.</p>
         <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">About this Guide</h2>
