--- a/Content/01_Introduction Topics/a1.UG_Legal.htm
+++ b/Content/01_Introduction Topics/a1.UG_Legal.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="827" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="841" MadCap:lastWidth="624">
     <head>
     </head>
     <body>
-        <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. ">Foreword</h1>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Editions &amp;&#160;Notices</h2>
+        <h1 class="AA_Chpt_Heading1" MadCap:conditions="Default.Print" MadCap:autonum="1. ">Foreword</h1>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Editions &amp;&#160;Notices</h2>
         <p>Document Control Number (DCN) <MadCap:variable name="AA_Integris-2k3k_Vars.DCN-UG-RL" /></p>
         <table style="width: 100%;border-top-left-radius: 1px;border-top-right-radius: 1px;border-bottom-right-radius: 1px;border-bottom-left-radius: 1px;border-left-style: solid;border-left-width: 1px;border-right-style: solid;border-right-width: 1px;border-top-style: solid;border-top-width: 1px;border-bottom-style: solid;border-bottom-width: 1px;margin-left: auto;margin-right: auto;">
             <col style="width: 150px;" />
@@ -28,13 +28,10 @@
                     </td>
                     <td style="vertical-align: top;font-size: 11pt;">
                         <p>Addition of the following features:</p>
-                        <p>Integris 2000:</p>
-                        <ul>
-                            <li>BBU&#160;Inventory data</li>
-                            <li>Loop-back detection added</li>
-                        </ul>
                         <p>Integris 3000:</p>
                         <ul>
+                            <li>Multi-graph</li>
+                            <li>Save / Load display configuration</li>
                             <li>Fast / Variable waterfall data</li>
                             <li>Automatic configuration selection</li>
                         </ul>
@@ -52,7 +49,7 @@
         <p><MadCap:variable name="AA_Integris-2k3k_Vars.Copyright" />. All rights reserved.  </p>
         <p>This work is proprietary and protected by copyright.  No part of this publication may be reproduced, stored in a retrieval system, or transmitted in any form by any means, electronic, mechanical, photocopying, recording, or otherwise, without the prior written permission of the copyright holder.</p>
         <p>All brand and product names used in this document are trademarks or registered trademarks of their respective owners.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">About this Guide</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">About this Guide</h2>
         <p>This guide describes the Integris system. Integris is a modular system and yours may not contain all the modules that are described in this guide. </p>
         <p>While we do our best to make this guide as user friendly as possible, you will find it helpful to read through the entire content to ensure you are familiar with the correct operation of the platform, and therefore avoid damage that might invalidate your warranty.</p>
     </body>
