--- a/Content/03_Unpacking/c.Setting Up.htm
+++ b/Content/03_Unpacking/c.Setting Up.htm
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="5348" MadCap:lastWidth="1196">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="832" MadCap:lastWidth="624">
     <head>
+        <link href="../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <link href="../Resources/Table Stylesheets/InfoBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <link href="../Resources/Table Stylesheets/CautionBoxStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Connecting to AC Power</h2>
-        <h2>Connecting to AC Power</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Connecting to AC Power</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Connecting to AC Power</h2>
         <p>It is suggested that you use AC power when you start up the computer for the first time.</p>
         <p>1. Plug the DC cord of the AC adapter to the power connector of the computer as shown below.</p>
         <p>2. Plug the female end of the AC power cord to the AC adapter and the male end to an electrical outlet.</p>
@@ -12,24 +15,24 @@
             <img src="../Resources/Images/2000/GETAK_Pwr_Connection.png" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="mc-float: center;" />
         </p>
         <p>Power is now being supplied from the electrical outlet to the AC adapter and onto your computer. You are ready to turn on the computer.</p>
-        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
-            <col style="width: 100%;" />
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-CautionBoxStyle-Column-Column1" />
             <tbody>
-                <tr>
-                    <td class="NOTES_Cell"><b>CAUTION</b>: Use only the AC adapter included with your computer. Using other AC adapters may damage the computer.<![CDATA[                       ]]></td>
+                <tr class="TableStyle-CautionBoxStyle-Body-Body1">
+                    <td class="TableStyle-CautionBoxStyle-BodyA-Column1-Body1"><b>CAUTION</b>: Use only the AC adapter included with your computer. Using other AC adapters may damage the computer.                       </td>
                 </tr>
             </tbody>
         </table>
-        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
-            <col style="width: 100%;" />
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/InfoBoxStyle01.css');" class="TableStyle-InfoBoxStyle01" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-InfoBoxStyle01-Column-Column1" />
             <tbody>
-                <tr>
-                    <td class="NOTES_Cell"><b>Note</b>: When the AC adapter is connected, it also charges the battery pack. <![CDATA[                       ]]></td>
+                <tr class="TableStyle-InfoBoxStyle01-Body-Body1">
+                    <td class="TableStyle-InfoBoxStyle01-BodyA-Column1-Body1"><b>Information</b>: When the AC adapter is connected, it also charges the battery pack.                        </td>
                 </tr>
             </tbody>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">Turning  the Computer On and Off</h2>
-        <h2>Turning  the Computer On and Off</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">Turning  the Computer On and Off</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Turning  the Computer On and Off</h2>
         <p>1. Open the top cover by pulling the cover latch and lifting up the cover. You can tilt the cover forward or backward for optimal viewing clarity.</p>
         <p style="text-align: center;">
             <img src="../Resources/Images/2000/GETAK_Pwr_On.png" MadCap:mediastyle="@media print { width: 400px;height: auto; }" />
@@ -39,14 +42,21 @@
         <p><b>Power off</b>: Use the Windows Start menu in the lower left and follow the shutdown procedure.</p>
         <p><b>Sleep</b>: Press the power button or use the Windows Start menu to put the computer in Sleep mode.</p>
         <p><b>Hibernate</b>: Use the Windows Start menu to put the computer into Hibernation mode.</p>
-        <p><b>Note</b>: “Sleep” is the default setting of the power button. You may change what the power button does in the Windows Control Panel.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.3. ">Touring the Chassis</h2>
-        <h2>Touring the Chassis</h2>
-        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
-            <col style="width: 100%;" />
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-NoteBoxStyle01-Column-Column1" />
             <tbody>
-                <tr>
-                    <td class="NOTES_Cell"><b>CAUTION</b>: You need to open the protective covers to access the connectors or devices inside. When not accessing a connector or device, make sure you close the cover completely to prevent the ingress of water and dust.<![CDATA[                       ]]></td>
+                <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
+                    <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1"><b>Note: </b>“Sleep” is the default setting of the power button. You may change what the power button does in the Windows Control Panel                      </td>
+                </tr>
+            </tbody>
+        </table>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.3. " MadCap:conditions="Default.Print">Touring the Chassis</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Touring the Chassis</h2>
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-CautionBoxStyle-Column-Column1" />
+            <tbody>
+                <tr class="TableStyle-CautionBoxStyle-Body-Body1">
+                    <td class="TableStyle-CautionBoxStyle-BodyA-Column1-Body1"><b>CAUTION</b>: You need to open the protective plastic covers to access the connectors and ports inside. When not accessing a connector or device, make sure you close the cover completely to prevent the ingress of water and dust.                       </td>
                 </tr>
             </tbody>
         </table>
@@ -74,7 +84,6 @@
                 </tr>
             </tbody>
         </table>
-        <p>&#160;</p>
         <p>To access a device bay, slide the latch toward the right to unlock and then push down the latch to release the cover. When closing, engage the latch and then slide the latch toward the left to lock.</p>
         <p style="text-align: center;">
             <img src="../Resources/Images/2000/GETAK_Right_View.png" MadCap:mediastyle="@media print { width: 400px;height: auto; }" />
