--- a/Content/03_Unpacking/g.Troubleshooting.htm
+++ b/Content/03_Unpacking/g.Troubleshooting.htm
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="3805" MadCap:lastWidth="1196">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="838" MadCap:lastWidth="624">
     <head>
+        <link href="../Resources/Table Stylesheets/CautionBoxStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/AA_styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1 class="AA_h1_Appendix" MadCap:autonum="Appendix A: ">Troubleshooting</h1>
-        <h2>Troubleshooting</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Troubleshooting</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Troubleshooting</h2>
         <p>Here are helpful hints to follow before you take further actions when you encounter any problem:</p>
         <ul>
             <li>Try to isolate which part of the computer is causing the problem.</li>
@@ -16,8 +17,8 @@
             <li>Make notes of your observations. Are there any messages on the screen? Do any indicators light? Do you hear any beeps? Detailed descriptions are useful to the service personnel when you need to consult one for assistance.</li>
         </ul>
         <p>If any problem persists after you follow the instructions in this section, contact Absolute Analysis support staff for help at <MadCap:variable name="AA_S&amp;C_Vars.WebAddressSupport" /></p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Battery Problems</h2>
-        <h2>Solving Battery Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">Battery Problems</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Solving Battery Problems</h2>
         <p>The battery does not charge (Battery Charge indicator does not light amber).</p>
         <ul>
             <li>Make sure that the AC adapter is properly connected.</li>
@@ -26,66 +27,57 @@
             <li>Make sure that the battery pack is installed correctly.</li>
             <li>Make sure that the battery terminals are clean. The operating time of a fully charged battery becomes shorter.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">Display Problems</h2>
-        <h2>Display Problems</h2>
-        <p><b>Nothing appears on the screen</b>
-        </p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.3. ">Display Problems</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Display Problems</h2>
+        <h3>Nothing appears on the screen</h3>
         <p>During operation, the screen may automatically turn off as a result of power management. Press any key to see if the screen comes back.</p>
         <p>The brightness level might be too low. Increase the brightness.</p>
         <p>The display output might be set to an external device. To switch the display back to the LCD, press the Fn+F9 hot key or change the display through the Display Settings Properties.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.3. ">LAN Problems</h2>
-        <h2>LAN Problems</h2>
-        <p><b>I cannot access the network.</b>
-        </p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.4. ">LAN Problems</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">LAN Problems</h2>
+        <h3>I cannot access the network.</h3>
         <ul>
             <li>Make sure that the LAN cable is properly connected to the RJ-45 connector and the network hub.</li>
             <li>Make sure that the network configuration is appropriate.</li>
             <li>Make sure that the user name or password is correct.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.4. ">Startup Problems</h2>
-        <h2>Startup Problems</h2>
-        <p><b>When you turn on the computer, it does not seem to respond.</b>
-        </p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.5. ">Startup Problems</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Startup Problems</h2>
+        <h3>When you turn on the computer, it does not seem to respond.</h3>
         <p>Make sure that either the AC adapter is connected or the battery has power.</p>
         <p>For models with the “HDD preheat” feature: When turning on the computer in an extremely low temperature environment, the computer will heat up the hard disk before starting up. The AC Power indicator lights red to indicate the heater is on. Wait till the heating is finished. </p>
         <p>If external AC power is not available and the remaining battery power is too low for the heating to complete, the computer may not start up. In case the computer fails to start up, turn off the computer and leave it in room temperature for about an hour before trying to turn it on again.</p>
-        <p><b>When you turn on the computer, it stops after POST.</b>
-        </p>
+        <h3>When you turn on the computer, it stops after POST.</h3>
         <p>Reset the system (see "Resetting the Computer" below).</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.5. ">WLAN Problems</h2>
-        <h2>WLAN Problems</h2>
-        <p><b>I cannot use the WLAN feature.</b>
-        </p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.6. ">WLAN Problems</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">WLAN Problems</h2>
+        <h3>I cannot use the WLAN feature.</h3>
         <p>Make sure that the WLAN feature is turned on. </p>
-        <p><b>Transmission quality is poor.</b>
-        </p>
+        <h3>Transmission quality is poor.</h3>
         <p>Your computer may be out-of-range of the router of access point. Move your computer closer to the Access Point or another WLAN device it is associated with.</p>
         <p>Check if there is high interference in the environment and solve the problem as described next.</p>
-        <p><b>Radio interference exists.</b>
-        </p>
+        <h3>Radio interference exists.</h3>
         <p>Move your computer away from the device causing the radio interference such as microwave oven and large metal objects.</p>
         <p>Plug your computer into an outlet on a different branch circuit from that used by the affecting device.</p>
-        <p><b>I cannot connect to another WLAN device.</b>
-        </p>
+        <h3>I cannot connect to another WLAN device.</h3>
         <ul>
             <li>Make sure that the WLAN feature is turned on.</li>
             <li>Make sure that the SSID setting is the same for every WLAN device in the network.</li>
             <li>Your computer is not recognizing changes. Restart the computer.</li>
             <li>Make sure that the IP address or subnet mask setting is correct.</li>
         </ul>
-        <p><b>I cannot communicate with the computer in the network when Infrastructure mode is configured.</b>
-        </p>
+        <h3>I cannot communicate with the computer in the network when Infrastructure mode is configured.</h3>
         <p>Make sure that the Access Point your computer is associated with is powered on and all the LEDs are working properly.</p>
         <p>If the operating radio channel is in poor quality, change the Access Point and all the wireless station(s) within the BSSID to another radio channel.</p>
         <p>Your computer may be in an out-of-range situation. Move your computer closer to the Access Point it is associated with.</p>
         <p>Make sure that your computer is configured with the same security option (encryption) to the Access Point.</p>
-        <p><b>I cannot access the network</b>.</p>
+        <h3>I cannot access the network.</h3>
         <p>Make sure that the network configuration is appropriate.</p>
         <p>Make sure that the user name or password is correct.</p>
         <p>You have moved out of range of the network.</p>
         <p>Turn off power management.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.6. ">Resetting the Computer</h2>
-        <h2>Resetting the Computer</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.7. ">Resetting the Computer</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Resetting the Computer</h2>
         <p>You may have to reset (reboot) your computer on some occasions when an error occurs and the program you are using hangs up.</p>
         <p>If you are sure the operation has stopped and you cannot use the “restart” function of the operating system, reset the computer</p>
         <p>Reset the computer by any of these methods:</p>
@@ -93,15 +85,15 @@
             <li>Press Ctrl+Alt+Del on the keyboard. This opens the Ctrl-Alt-Del screen where you can select actions including Restart.</li>
             <li>If the above action does not work, press and hold the power button for more than 5 seconds to force the system to turn off. Then turn on the power again.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.7. ">System Restore</h2>
-        <h2>System Restore</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.8. ">System Restore</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">System Restore</h2>
         <p>Use System Restore when you want the Windows 7 operating system to be returned to the factory state.</p>
-        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
-            <col style="width: 100%;" />
+        <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;mc-table-style: url('../Resources/Table Stylesheets/CautionBoxStyle.css');" class="TableStyle-CautionBoxStyle" cellspacing="0">
+            <col style="width: 100%;" class="TableStyle-CautionBoxStyle-Column-Column1" />
             <tbody>
-                <tr>
-                    <td class="NOTES_Cell">
-                        <p><b>WARNING</b>: Using this feature will return your Windows system to an earlier configuration and this could mean that programs and drivers may be deleted.                     </p>
+                <tr class="TableStyle-CautionBoxStyle-Body-Body1">
+                    <td class="TableStyle-CautionBoxStyle-BodyA-Column1-Body1">
+                        <p><b>Caution</b>: Using this feature will return your Windows system to an earlier configuration and this could mean that programs and drivers may be deleted.                     </p>
                     </td>
                 </tr>
             </tbody>
