--- a/Content/30_3000/b1.Integris_3000_Display.htm
+++ b/Content/30_3000/b1.Integris_3000_Display.htm
@@ -1,20 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="839" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="806" MadCap:lastWidth="624">
     <head><title>The Integris 3000 Display</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">The Integris 3000 Display</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">The Integris 3000 Display</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">The Integris 3000 Display</h2>
-        <p>The Integris 3000 display consists of six main areas <MadCap:xref href="#The_Integris_3000_Screen" class="ListOfPageNumber">(See  Figure 1. 1: ) </MadCap:xref></p>
+        <p>The Integris 3000 Classic Menu is displayed by default and this is how the screen appears after a default reset. It consists of six main areas <MadCap:xref href="#The_Integris_3000_Screen" class="ListOfPageNumber">(See  Figure 1. 1: ) </MadCap:xref></p>
         <ol>
-            <li><b>System Status</b> This displays quick reference values showing how key parameters have been set. If System &gt; Source is set to <i>Live</i> it additionally shows the link status (Options: Red “Down”, Green “OK”).
-            The System Status area is 'live' so values can be set by clicking on the number and setting a value using a keypad or slider, or
-				 selecting the value from a list. 
-            <p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c1.System_Status_Pane.htm" class="XREF_Range">The System Status Pane on page 1</MadCap:xref>)</MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:conditionalText>(See: <MadCap:xref href="c1.System_Status_Pane.htm">Using the System Status Pane
-				</MadCap:xref>)</MadCap:conditionalText></p><table style="margin-left: auto;margin-right: auto;"><col></col><tbody><tr><td style="text-align: center;"><img src="../Resources/Images/Labelled_Screen_Display.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 500px; }"></img></td></tr><tr style="height: 14px;"><td style="text-align: center;"><p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="The_Integris_3000_Screen"></a>The Integris 3000 Screen</p></td></tr></tbody></table></li>
+            <li>
+                <p><b>System Status Pane</b> This displays quick reference values showing how key parameters have been set.
+					 If System &gt; Source is set to <i>Live</i> it additionally shows the link status (Options: Red “Down”, Green “Active”).</p>
+                <p>The System Status area is 'live' so values can be set by clicking on the number and setting a value using a keypad or slider, or
+				 selecting the value from a list.</p>
+                <p MadCap:conditions="Default.Print">
+                    <MadCap:conditionalText>(See: <MadCap:xref href="c1.System_Status_Pane.htm" class="XREF_Range">The System Status Pane on page 1</MadCap:xref>)</MadCap:conditionalText>
+                </p>
+                <p MadCap:conditions="Default.Screen">
+                    <MadCap:conditionalText>(See: <MadCap:xref href="c1.System_Status_Pane.htm">
+								Using the System Status Pane</MadCap:xref>)</MadCap:conditionalText>
+                </p>
+                <table style="margin-left: auto;margin-right: auto;">
+                    <col />
+                    <tbody>
+                        <tr>
+                            <td style="text-align: center;">
+                                <img src="../Resources/Images/Labelled_Screen_Display.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px     ;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 500px; }" />
+                            </td>
+                        </tr>
+                        <tr style="height: 14px;">
+                            <td style="text-align: center;">
+                                <p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="The_Integris_3000_Screen"></a>The Integris 3000 Screen</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
             <li><b>Record Trace &amp;&#160;Snapshot:</b> Record a trace file to be replayed later,
 				 or take and display screen shots.
-<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range"> </MadCap:xref><MadCap:conditionalText><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c11a.Snapshot.htm">Taking a Screen Snapshot
+<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">  <![CDATA[ ]]></MadCap:xref><MadCap:conditionalText><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c11a.Snapshot.htm">Taking a Screen Snapshot
 				</MadCap:xref></MadCap:xref></MadCap:conditionalText>)
            </p></li>
             <li>
@@ -33,19 +56,12 @@
 					 Combinations of Power, Waterfall and Persistent graphs can be displayed by selecting them on <b>Graph &gt;
 					 Type</b>. 
 					
-					<MadCap:conditionalText>(See: <MadCap:xref href="c4.Spectrum Setup.htm" class="XREF_Range">"Setting up the Power Spectrum Graph" on page 1</MadCap:xref></MadCap:conditionalText><MadCap:conditionalText>See: <MadCap:xref href="c4.Spectrum Setup.htm">Setting up the Power Spectrum Graph</MadCap:xref></MadCap:conditionalText></li>
-            <li>
-                <p><b>Crosshairs</b>: These can be enabled or disable on <b>Graph &gt; Crosshair</b>. The crosshairs follow the mouse position 
-			and the X&#160;&amp;&#160;Y values are displayed at position (6) (see below).</p>
-                <p MadCap:conditions="Default.Print">
-                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Multi-Screen -WIP.htm" class="XREF_Range">"Using the Crosshairs" on page 1
-			</MadCap:xref>)</MadCap:conditionalText>
-                </p>
-                <p MadCap:conditions="Default.Screen">
-                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Multi-Screen -WIP.htm">Using the Crosshairs</MadCap:xref>)</MadCap:conditionalText>
-                </p>
-            </li>
-            <li><b>Crosshair Values</b>: These show the X&#160;&amp;&#160;Y values at the mouse / crosshair position (5) (see above).</li>
+					</li>
+            <p MadCap:conditions="Default.Print">
+                (See: <MadCap:xref href="c4.Spectrum Setup.htm" class="XREF_Range">"Setting up the Power
+				 Spectrum Graph" on page 1</MadCap:xref></p>
+            <p MadCap:conditions="Default.Screen">
+                See: <MadCap:xref href="c4.Spectrum Setup.htm">Setting up the Power Spectrum Graph</MadCap:xref></p>
             <li style="page-break-after: auto;">
                 <p><b>Menus</b>: The screenshot shows <i>Classic Menus</i>. Alternatively
 			 you can use standard Windows style <i>Modern Menus</i>. You can swap between the two menu types using
