--- a/Content/30_3000/b3.Menus&Menu_Selector.htm
+++ b/Content/30_3000/b3.Menus&Menu_Selector.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>The Menu Selector</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Switching Between  Menu Types</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Switching Between  Menu Types</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Switching Between  Menu Types</h2>
         <p>The Integris 3000 can be configured to use either the Classic Integris menu or a 'Modern' menu system. You can change between the two types using the Preferences menu item. This is located at:</p>
         <ul>
@@ -24,7 +24,7 @@
                 </tr>
             </tbody>
         </table>
-        <table>
+        <table style="margin-left: auto;margin-right: auto;">
             <col style="width: 211px;" />
             <col />
             <col />
@@ -53,7 +53,7 @@
                 </td>
             </tr>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. " MadCap:conditions="Default.Print">The Menu Selector (Classic Menus Only)</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.2. ">The Menu Selector (Classic Menus Only)</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">The Menu Selector (Classic Menus Only)</h2>
         <p>Seven menus are available in the <i>Classic View</i> and Nine in the <i>Modern View</i>.</p>
         <p> When using the <i>Classic Menus</i> a manu bar appears at the bottom of the screen that allows you to select the desired menu, which then appears to the top right of the screen. </p>
