--- a/Content/30_3000/b5.Reset.htm
+++ b/Content/30_3000/b5.Reset.htm
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="406" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="492" MadCap:lastWidth="624">
     <head><title>System Reset</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">System Reset</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">System Reset</h2>
         <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">System Reset</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
@@ -25,17 +25,32 @@
             </tbody>
         </table>
         <p style="vertical-align: top;">System reset allows you to return the system to factory defaults. It then restarts the <i>Integris 3000</i> application in an 'As Shipped' state.</p>
-        <table class="FigureTable">
+        <table class="FigureTable" MadCap:conditions="Default.Screen">
             <col />
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../Resources/Images/3000/3.1/3k_Reset-Warning.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="height: 250pt;width: 300px;" />
+                        <img src="../Resources/Images/3000/3.1/3k_Reset-Warning-sml.jpg" MadCap:mediastyle="@media print { width: 250px;height: 52px; }" style="width: 250px;height: 52px;" />
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Reset Warning</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <table class="FigureTable" MadCap:conditions="Default.Print">
+            <col />
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <img src="../Resources/Images/3000/3.1/3k_Reset-Warning.jpg" MadCap:mediastyle="@media print { height: auto;width: 350px; }" style="height: 250pt;width: 350px;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.2 ">Reset Warning</p>
                     </td>
                 </tr>
             </tbody>
