--- a/Content/30_3000/c11a.Snapshot.htm
+++ b/Content/30_3000/c11a.Snapshot.htm
@@ -3,16 +3,16 @@
     <head><title>Screen Snapshot</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Taking a Screen Snapshot</h2>
-        <h2 class="AA_Online_H2">Taking a Screen Snapshot</h2>
-        <p>The Integris 3000 has a snapshot feature that allows you to take screen shots when a set of values or the display is showing something you would like to show later. </p>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Taking a Screen Snapshot</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Taking a Screen Snapshot</h2>
+        <p>The Integris 3000 has a snapshot feature that allows you to take screen shots when a set of values or the display is showing something you would like to save for later. </p>
         <table>
             <col style="width: 487px;" />
             <col style="width: 168px;" />
             <tbody>
                 <tr>
                     <td style="vertical-align: top;">
-                        <p style="vertical-align: top;">Images are saved in JPEG&#160;(.jpg) format in the <i style="font-family: 'Courier New';">Integris-3000\AA_SCREEN_CAPTURE\</i> folder. The file names start with an 'SC' followed by the date and then the time (e.g.<span style="font-family: 'Courier New';">SC20151125_084539_695.jpg</span>)</p>
+                        <p style="vertical-align: top;">Images are saved in JPEG&#160;(.jpg) format in the <i style="font-family: 'Courier New';">Integris-3000\AA_SCREEN_CAPTURE\</i> folder. File names start with an 'SC' followed by the date and then the time (e.g.<span style="font-family: 'Courier New';">SC20151125_084539_695.jpg</span>)</p>
                         <p style="vertical-align: top;">Click on the left-hand camera icon to take a screen shot. The icon briefly displays a number '1' to indicate a screenshot has been taken.</p>
                         <p style="vertical-align: top;">Click on the right hand 'eye' icon to select the previously saved screen shot you want to display.</p>
                     </td>
@@ -22,7 +22,7 @@
                             <tbody>
                                 <tr>
                                     <td style="text-align: center;">
-                                        <img src="../../Resources/Images/3000/3.1/3k_RecordControls.jpg" MadCap:mediastyle="@media print { height: auto;width: 220px; }" style="margin-bottom: 5px;height: auto;width: 220px;" />
+                                        <img src="../Resources/Images/3000/3.1/3k_RecordControls.jpg" MadCap:mediastyle="@media print { height: auto;width: 220px; }" style="margin-bottom: 5px;height: auto;width: 220px;" />
                                     </td>
                                 </tr>
                                 <tr>
