--- a/Content/30_3000/c11b.Recording.htm
+++ b/Content/30_3000/c11b.Recording.htm
@@ -1,28 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="690" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="802" MadCap:lastWidth="624">
     <head><title>Screen Snapshot</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Recording RF&#160;Data</h2>
-        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Recording RF&#160;Data</h2>
-        <p>You can record traces to be replayed later, or loaded into <i>Integris Expert</i> for analysis. </p>
-        <table style="width: 100%; margin-left: 0; margin-right: auto;">
-            <col>
-            </col>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Recording &amp;&#160;Replaying RF&#160;Data</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Recording &amp;&#160;Replaying RF&#160;Data</h2>
+        <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
+            <col />
+            <col />
             <tbody>
                 <tr>
-                    <td class="NOTE">
-                        <p style="font-weight: normal;"><b>Note</b>: This feature is different to Capturing Bit Stream <b>Help &gt; Debug</b>.</p>
-                        <p style="font-weight: normal;" MadCap:conditions="Default.Print">
-                            <MadCap:conditionalText>(See <MadCap:xref href="c12.Export Debug File.htm" class="XREF_Range">"Exporting a File for Debug" on page 1</MadCap:xref>)</MadCap:conditionalText>
-                        </p>
-                        <p style="font-weight: normal;" MadCap:conditions="Default.Screen">
-                            <MadCap:conditionalText>(See:              <MadCap:xref href="c12.Export Debug File.htm">Exporting a File for Debug</MadCap:xref>)</MadCap:conditionalText>
-                        </p>
+                    <td style="font-size: 11pt;text-align: left;"><b>Menu Location</b>
                     </td>
+                    <td>&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-style: italic;font-size: 11pt;text-align: left;">GUI: Record icon at bottom left of the screen</td>
+                    <td>&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-style: italic;font-size: 11pt;text-align: left;">Classic   Menu  <b>Source &gt; Record / Playback</b></td>
+                    <td>&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-style: italic;font-size: 11pt;text-align: left;">Modern  Menu  <b>Source &gt; Record / Playback </b></td>
+                    <td>&#160;</td>
                 </tr>
             </tbody>
         </table>
+        <p>You can record graphs to be replayed later,</p>
         <table>
             <col style="width: 487px;" />
             <col style="width: 168px;" />
@@ -31,14 +37,9 @@
                     <td style="vertical-align: top;">
                         <ul>
                             <li style="vertical-align: top;">Recording are saved in the proprietary .IQS format and are saved to the <span style="font-family: 'Courier New';">C:\Integris-3000\AA_IQS_TRACES</span> folder.</li>
-                            <li style="vertical-align: top;">Recordings are fixed length with a file size of approximately 130 Megabytes.</li>
+                            <li style="vertical-align: top;">Recordings are fixed duration of approximately 50 seconds, and have a file size of approximately 130 Megabytes.</li>
                             <li style="vertical-align: top;">File names start with the date (in YearMonthDay format), an underscore then the time (<span style="font-family: 'Courier New';">e.g. 20151125_084539_695.iqs</span>)</li>
                         </ul>
-                        <p style="vertical-align: top;">To record a trace:</p>
-                        <ol>
-                            <li style="vertical-align: top;">Click on the circular red icon above the camera icon at bottom left of the screen. A <i>Select Destination Fil</i>e dialog will open</li>
-                            <li style="vertical-align: top;">Click <b>OK</b> to start recording.</li>
-                        </ol>
                     </td>
                     <td style="vertical-align: top;">
                         <table>
@@ -51,7 +52,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Record Control</p>
+                                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="Rec"></a>Record Control</p>
                                     </td>
                                 </tr>
                             </tbody>
@@ -60,5 +61,19 @@
                 </tr>
             </tbody>
         </table>
+        <h3>To record a graph:</h3>
+        <ol>
+            <li style="vertical-align: top;">Either</li>
+            <ul>
+                <li style="vertical-align: top;">Click on the circular red icon above the camera icon at bottom left of the screen <MadCap:xref href="#Rec" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref>. A <i>Select Destination File</i> dialog will open to name and save the recording</li>
+                <li style="vertical-align: top;">Open the <b>Source</b> menu and click on <b>Record</b>. A <i>Select Destination File</i> dialog will open  to name and save the recording</li>
+            </ul>
+            <li style="vertical-align: top;">Click <b>OK</b> to start recording.</li>
+        </ol>
+        <h3>To replay a graph:</h3>
+        <ol>
+            <li style="vertical-align: top;">Open the <b>Source</b> menu and click on <b>Playback</b>. A <i>Select File</i> dialog will open  to allow you to select a file for replaying</li>
+            <li>Click <b>OK</b> to playback the file.</li>
+        </ol>
     </body>
 </html>
