--- a/Content/30_3000/m.Help_Menu.htm
+++ b/Content/30_3000/m.Help_Menu.htm
@@ -22,7 +22,7 @@
         <ul>
             <li style="text-align: left;"><![CDATA[
 		 ]]><b>View Help</b> opens the <i>Integris 3000</i> online help.</li>
-            <li style="text-align: left;"><b>Debug</b> gives you the option to capture a debug file. <MadCap:conditionalText><MadCap:xref href="c12.Export Debug File.htm" class="IndexPageNumber">(See "Exporting a File for Debug", page 1)</MadCap:xref></MadCap:conditionalText><MadCap:conditionalText>See: <MadCap:xref href="c12.Export Debug File.htm">Exporting a File for Debug</MadCap:xref></MadCap:conditionalText></li>
+            <li style="text-align: left;"><b>Debug</b> gives you the option to capture a debug file. <MadCap:conditionalText><MadCap:xref href="x.Export Debug File.htm" class="IndexPageNumber">(See "Exporting a File for Debug", page 1)</MadCap:xref></MadCap:conditionalText><MadCap:conditionalText>See: <MadCap:xref href="x.Export Debug File.htm">Exporting a File for Debug</MadCap:xref></MadCap:conditionalText></li>
             <li style="text-align: left;"><b>About</b> displays information on the software type and version.</li>
         </ul>
         <table class="FigureTable">
