--- a/Content/30_3000/x.Export Debug File.htm
+++ b/Content/30_3000/x.Export Debug File.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="708" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="717" MadCap:lastWidth="624">
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Exporting a File for Debug</h2>
-        <h2 class="AA_Online_H2">Exporting a File for Debug</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Exporting a File for Debug</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Exporting a File for Debug</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
             <col />
