--- a/Content/Print Only Topics/TitlePage.htm
+++ b/Content/Print Only Topics/TitlePage.htm
@@ -5,7 +5,7 @@
         <p style="text-align: center;">
             <img src="../Resources/Images/Integris-Logo-01 700x260.jpg" style="width: 400px;height: auto;margin-top: 40px;" />
         </p>
-        <p class="ManualTitle_1st_Line" style="text-align: center;"><MadCap:variable name="AA_DOC_Vars.ProductName" />
+        <p class="ManualTitle_1st_Line" style="text-align: center;"><MadCap:variable name="AA_S&amp;C_Vars.ProductName" />
         </p>
         <p style="text-align: center;">
             <img src="../Resources/Images/2000/Integris_3000_Image-700x580.png" style="height: auto;width: 500px;margin-top: 40px;" />
